--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@ body {
   justify-content: center;
   align-items: center;
   font-family: "Nunito", sans-serif;
-  /* font-size: 3.5rem; */
+  font-size: 3.5rem;
   padding: 0 2rem;
 }
